--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,22 +7,73 @@
     <x>0</x>
     <y>0</y>
     <width>1175</width>
-    <height>499</height>
+    <height>598</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QWidget" name="verticalLayoutWidget">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>40</y>
-     <width>1131</width>
-     <height>441</height>
+     <x>10</x>
+     <y>80</y>
+     <width>281</width>
+     <height>20</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="goodsLayout"/>
+   <property name="text">
+    <string>Количество товаров в текущем заказе:</string>
+   </property>
+  </widget>
+  <widget class="QScrollArea" name="scrollArea">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>1151</width>
+     <height>471</height>
+    </rect>
+   </property>
+   <property name="widgetResizable">
+    <bool>true</bool>
+   </property>
+   <widget class="QWidget" name="scrollAreaWidgetContents">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>1149</width>
+      <height>469</height>
+     </rect>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>40</y>
+     <width>271</width>
+     <height>29</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Мои заказы</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelCountGoods">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>80</y>
+     <width>63</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>0</string>
+   </property>
   </widget>
  </widget>
  <resources/>
