--- a/createorderdialog.ui
+++ b/createorderdialog.ui
@@ -39,7 +39,7 @@
   <widget class="QComboBox" name="comboBoxTypeOrder">
    <property name="geometry">
     <rect>
-     <x>460</x>
+     <x>440</x>
      <y>80</y>
      <width>161</width>
      <height>26</height>
@@ -59,9 +59,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>460</x>
-     <y>50</y>
-     <width>161</width>
+     <x>480</x>
+     <y>60</y>
+     <width>71</width>
      <height>20</height>
     </rect>
    </property>
@@ -72,9 +72,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>50</y>
-     <width>161</width>
+     <x>610</x>
+     <y>60</y>
+     <width>121</width>
      <height>20</height>
     </rect>
    </property>
@@ -85,7 +85,7 @@
   <widget class="QComboBox" name="comboBoxPriorityOrder">
    <property name="geometry">
     <rect>
-     <x>650</x>
+     <x>590</x>
      <y>80</y>
      <width>161</width>
      <height>26</height>
@@ -141,6 +141,44 @@
    </property>
    <property name="text">
     <string>Перейти к оплате</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxPaymentSystem">
+   <property name="geometry">
+    <rect>
+     <x>760</x>
+     <y>80</y>
+     <width>161</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>СБП</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>СБЕР</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>ЯНДЕКС</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>60</y>
+     <width>121</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Способ оплаты</string>
    </property>
   </widget>
  </widget>
